# oshaberi

./: .editorconfig  .env.sample  .eslintrc.json  .gitignore  LICENSE  README.md  bun.lockb  compose.yml  package.json  tsconfig.json  views  vite.config.ts
.yarn/patches/: @types-express-serve-static-core-npm-4.17.35-c86e5f6e4a.patch  vite-plugin-wasm-npm-3.2.2-d57e3fcde1.patch
client/: .eslintrc.cjs  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: App.vue  NewApp.vue  cmarked.ts  main.ts  store.ts  style.css
client/src/components/: CButton.vue  CSettings.vue  CToast.vue  ChatBubble.vue
client/src/hooks/: useChat.ts  useLLM.ts  useMessages.ts  useSaveStates.ts  useSpeech.ts  useToast.ts  useTokenCalculator.ts
client/src/lib/: functions.ts
lingua-nodejs/: Cargo.toml  README.md  index.d.ts  index.mjs  package.json  tsconfig.json
lingua-nodejs/src/: lib.rs
patches/: vite-plugin-wasm+3.2.2.patch
server/: .eslintrc.cjs  .eslintrc.js  README.md  package.json  tsconfig.json
server/src/: api.ts  assets.ts  chatgpt.ts  home.ts  index.ts  logger.ts  main.ts  providers.ts  types.ts  vite.ts
server/src/lib/: cheerio.ts  fetcher.ts  functions.ts  getVectorStore.ts  loaders.ts  logger.ts  message.ts  redis.ts  store.ts
server/src/routers/: chatgpt.ts  index.ts  state.ts
server/src/types/: index.ts  loaders.ts  ollama.ts
src/: App.vue  clipboard.ts  cmarked.ts  main.ts  window.d.ts
src/components/: CButton.vue  CToast.vue  ChatBubble.vue
src/hooks/: useLoading.ts  useSpeech.ts
views/: index.html.ejs
(+9 files in other folders)
